--- a/Views/css/style.css
+++ b/Views/css/style.css
@@ -12,7 +12,7 @@
 
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 70px;
-    color: chocolate;
+    color: rgb(15, 100, 150);
 }
 
 .subtitulo {
