--- a/Views/css/style.css
+++ b/Views/css/style.css
@@ -34,3 +34,13 @@
     font-size: 9px;
 }
 
+.footer{
+    margin: 1.25rem 0.625rem;
+    padding: 0.9375rem;
+}
+
+.enlace__footer{
+    color: #000;
+    font-weight: bold;
+    text-decoration: none;
+}
